--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "xenov",
   "license": "ISC",
   "dependencies": {
-    "bulma": "^0.3.2"
+    "bulma": "^0.3.2",
+    "express": "^4.15.2"
   }
 }
